Fix emails collapsing. Prevent double sending emails after double click at the “send” button. Update emails after changing category. Fix UI at client/manages: Remove tag ‘a’ in link because it shows twice.

--- a/css/ang/directives/communication.css
+++ b/css/ang/directives/communication.css
@@ -120,10 +120,18 @@
   margin-bottom: 15px;
   display: flex;
   gap: 10px;
+  position: relative;
 }
 
 .com__message-buttons .ui-button-icon {
   margin: 0;
+}
+
+.com__message-buttons-loader {
+  background: rgba(255, 255, 255, 0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .com__errors-wrap {
